<resources>
    <string name="app_name">Project - Prerak 000825410</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="about">About</string>
    <string name="about_us_text"><b>Google Books</b>(previously known as <b>Google Book Search</b> and <b>Google Print</b> and by its codename <b>Project Ocean</b>) is a service from Google Inc. that searches the full text of books and magazines that Google has scanned, converted to text using optical character recognition (OCR), and stored in its digital database. Books are provided either by publishers and authors through the Google Books Partner Program, or by Google\'s library partners through the Library Project. Additionally, Google has partnered with a number of magazine publishers to digitize their archives.The Publisher Program was first known as Google Print when it was introduced at the Frankfurt Book Fair in October 2004. The Google Books Library Project, which scans works in the collections of library partners and adds them to the digital inventory, was announced in December 2004. The Google Books initiative has been hailed for its potential to offer unprecedented access to what may become the largest online body of human knowledge and promoting the democratization of knowledge. However, it has also been criticized for potential copyright violations, and lack of editing to correct the many errors introduced into the scanned texts by the OCR process.</string>
    <string name="title">Title</string>
    <string name="search_by_title">Search by Title</string>
    <string name="author">Author</string>
    <string name="search_by_author">Search by Author</string>
    <string name="search_related_books">Search Related Books</string>
    <string name="notify">Notify</string>
    <string name="google_books">Google Books</string>
    <string name="email_mohawkcollege_ca">000825410@mohawkcollege.ca</string>
</resources>
