<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#39A7EDFF"

    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <ImageView
        android:id="@+id/homeImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@drawable/ic_google_books_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="top"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/title"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_by_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="top"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/authorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/author"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/authorEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_by_author"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/searchBooksButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#9000BCD4"
            android:hint="@string/search_related_books"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textColor="?attr/colorBackgroundFloating"
            android:textColorHint="@android:color/background_light"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>